--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -113,22 +113,23 @@
                 <TextView
                     android:id="@+id/textView8"
                     android:layout_width="272dp"
-                    android:layout_height="66dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_height="48dp"
+                    android:layout_marginTop="32dp"
                     android:fontFamily="@font/aleodos"
-                    android:text="Trámites de la secretaria de la facultad."
+                    android:text="Trámites académicos"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="24sp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.47"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/btnAcademico"
                     android:layout_width="161dp"
                     android:layout_height="39dp"
-                    android:layout_marginBottom="16dp"
+                    android:layout_marginBottom="20dp"
                     android:background="@drawable/backgroundbuttonhome"
                     android:backgroundTint="#FFFFFF"
                     android:fontFamily="@font/aleodos"
@@ -137,6 +138,7 @@
                     android:textColor="#790016"
                     app:layout_constraintBottom_toBottomOf="@+id/view7"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.489"
                     app:layout_constraintStart_toStartOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -157,7 +159,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.1" />
+        app:layout_constraintGuide_percent="0.0998632" />
 
     <TextView
         android:id="@+id/textView4"
